[project]
name = "pulsar"
version = "0.1.0"
description = "Opinionated strictly typed Python library for creating Discord bots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
